pagina da camisa

--- a/trabalho-pi2-master/trabalho-pi2-master/frontend/shirts.html
+++ b/trabalho-pi2-master/trabalho-pi2-master/frontend/shirts.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="Js/script.js"></script>
   <script src="Js/list-shirts.js"></script>
   <title></title>
 </head>
@@ -57,13 +58,14 @@
           </li>
         </ul>
       </nav>
-      <div class="line"></div>
-      <main>
-        <div class="wrapper_shirt" id="shirts_list">
+    </header>
+    <div class="line"></div>
+    <main>
+      <div class="wrapper_shirt" id="shirts_list">
 
-        </div>
+      </div>
 
-      </main>
+    </main>
   </div>
 </body>
 
