--- a/trabalho-pi2-master/trabalho-pi2-master/frontend/shirts.html
+++ b/trabalho-pi2-master/trabalho-pi2-master/frontend/shirts.html
@@ -20,7 +20,7 @@
         <div class="logo"><img src="imagem/logo.png" alt="logo" /></div>
         <div class="header_search">
           <div class="wrapper_search">
-            <input id="search_input" type="text" />
+            <input id="search_input" type="text" placeholder="O que você procura?"/>
             <div class="example">
               Ex: flamengo, barcelona, basquete, vôlei
             </div>
